--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -68,6 +68,7 @@ on property:sys.sensors.acc=*
     start calibacc
 
 on property:sys.boot_completed=1
+    restart ril-daemon1
     restart ril-daemon
     restart ril-daemon1
     restart netmgrd
